/*
 * $Id: ChangeLog,v 1.5754 2007/10/31 10:44:10 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-10-31 11:44 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>

  * source\ct\disk.c
    * corrected VolSerial because it was returning a decimal value now return a longlong value.
    
  * source\rtl\disksphb.c
    + Added functionality now HB_DISKSPACE support unc paths.
    synced with harbour


2007-10-31 13:30 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbver.h
    ! Fixed "no newline at end of file" warning.
  * source/debug/dbgthsh.prg
  * source/debug/dbgtobj.prg
    ! Fixed a nasty RTE when monitoring hashes in the debugger.

2007-10-31 10:00 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>

  * source\rtl\cdpapi.c
  * source\rtl\seconds.c
  * source\rtl\setcolor.c
  * source\rtl\win32ole.prg
  * include\hbapicdp.h
    * changed some parameters to const.
    + added hb_cdpGetChar()

  * source/compiler/harbour.sly
    - removed some warnings

  * source/macro/macro.y
    - removed warnings compiling under BCC and watcom

  * source/rdd/workarea.c
    * initialize uiFlags also when DBS_FLAGS is not set

  * source/rdd/bmdbfcdx/bmdbfcdx1.c
    * fixed hb_cdxSkipFilter() declaration - it should be 'static' function

  * include/hbapi.h
  * source/vm/itemapi.c
  * source/vm/fastitem.c
  * source/vm/garbage.c
    + added extended item references - it's universal reference which
      can be used by HVM for many different things without introducing
      new item types

  * source/rdd/dbf1.c
    + Initialized counter value on ZAP for auto incremental fields.
    + loaded field _NullFlags as hidden and the rest of flags when it exists.
      
  * source/rdd/dbf1.c
  * source/rdd/usrrdd/usrrdd.c
    * use hb_vmPushItemRef()

  * include/hbapirdd.h